refactor: change list and list folder return to []map[{req_id}]data
